--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Real Tech Computer Institute</title>
+  <title>About Us - Real Tech</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #121212; color: #f1f1f1; }
     header { background: #000; padding: 20px; text-align: center; }
@@ -24,9 +24,10 @@
     </nav>
   </header>
   <section>
-    <h1>Welcome to Real Tech Computer Institute</h1>
-    <p>We provide the best computer education in Ramgarh with professional courses.</p>
-    <img class="sample" src="https://picsum.photos/600/300?random=1" alt="Institute">
+    <h1>About Us</h1>
+    <p>Real Tech Computer Institute is dedicated to empowering students with the latest IT skills.
+    We focus on practical knowledge and modern teaching methods.</p>
+    <img class="sample" src="https://picsum.photos/600/300?random=2" alt="Classroom">
   </section>
   <footer>&copy; 2025 Real Tech Computer Institute</footer>
 </body>
