--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Real Tech Computer Institute</title>
+  <title>Contact Us - Real Tech</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #121212; color: #f1f1f1; }
     header { background: #000; padding: 20px; text-align: center; }
     header img { height: 60px; }
     nav a { margin: 0 15px; text-decoration: none; color: yellow; font-weight: bold; }
     section { padding: 40px; text-align: center; }
+    form { max-width: 500px; margin: auto; background: #1e1e1e; padding: 20px; border-radius: 10px; }
+    input, textarea { width: 100%; margin: 10px 0; padding: 10px; border: none; border-radius: 5px; }
+    button { padding: 10px 20px; background: yellow; color: #000; border: none; border-radius: 5px; cursor: pointer; }
     footer { background: #000; text-align: center; padding: 15px; margin-top: 20px; }
-    img.sample { width: 300px; border-radius: 10px; margin: 20px; }
   </style>
 </head>
 <body>
@@ -24,9 +26,13 @@
     </nav>
   </header>
   <section>
-    <h1>Welcome to Real Tech Computer Institute</h1>
-    <p>We provide the best computer education in Ramgarh with professional courses.</p>
-    <img class="sample" src="https://picsum.photos/600/300?random=1" alt="Institute">
+    <h1>Contact Us</h1>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="5" placeholder="Your Message"></textarea>
+      <button type="submit">Send</button>
+    </form>
   </section>
   <footer>&copy; 2025 Real Tech Computer Institute</footer>
 </body>
