--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Real Tech Computer Institute</title>
+  <title>Courses - Real Tech</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #121212; color: #f1f1f1; }
     header { background: #000; padding: 20px; text-align: center; }
@@ -10,6 +10,7 @@
     nav a { margin: 0 15px; text-decoration: none; color: yellow; font-weight: bold; }
     section { padding: 40px; text-align: center; }
     footer { background: #000; text-align: center; padding: 15px; margin-top: 20px; }
+    .course { margin: 20px auto; max-width: 600px; background: #1e1e1e; padding: 20px; border-radius: 10px; }
     img.sample { width: 300px; border-radius: 10px; margin: 20px; }
   </style>
 </head>
@@ -24,9 +25,20 @@
     </nav>
   </header>
   <section>
-    <h1>Welcome to Real Tech Computer Institute</h1>
-    <p>We provide the best computer education in Ramgarh with professional courses.</p>
-    <img class="sample" src="https://picsum.photos/600/300?random=1" alt="Institute">
+    <h1>Our Courses</h1>
+    <div class="course">
+      <h2>DCA</h2>
+      <p>Diploma in Computer Applications – 6 months course.</p>
+    </div>
+    <div class="course">
+      <h2>ADCA</h2>
+      <p>Advanced Diploma in Computer Applications – 12 months course.</p>
+    </div>
+    <div class="course">
+      <h2>CCC</h2>
+      <p>Course on Computer Concepts – 3 months course.</p>
+    </div>
+    <img class="sample" src="https://picsum.photos/600/300?random=3" alt="Courses">
   </section>
   <footer>&copy; 2025 Real Tech Computer Institute</footer>
 </body>
